--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven'
+
+group = 'com.github.fighter0ik'
 
 android {
     compileSdkVersion 23
