--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -37,6 +37,9 @@ task debugJar(type: Jar) {
     baseName 'slf4j-android'
     appendix 'debug'
     from 'build/intermediates/classes/debug/'
+    exclude '**/BuildConfig.class'
+    exclude '**/R.class'
+    exclude '**/R$*.class'
     destinationDir = file( 'build/outputs/jar/' )
 }
 
@@ -44,6 +47,9 @@ task releaseJar(type: Jar) {
     baseName 'slf4j-android'
     appendix 'release'
     from 'build/intermediates/classes/release/'
+    exclude '**/BuildConfig.class'
+    exclude '**/R.class'
+    exclude '**/R$*.class'
     destinationDir = file( 'build/outputs/jar/' )
 }
 
